fix: dark mode issue
closes #66

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -909,6 +909,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -963,4 +968,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:\!bg-bgaBlue-light:hover {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(72 113 182 / var(--tw-bg-opacity)) !important;
+}
+
+.dark .dark\:text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
